--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,6 +1,6 @@
 .home {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     border: 1px solid;
     position: relative;
     z-index: 2;
@@ -59,7 +59,7 @@
 .logo {
     color: #ffffff;
     font-size: 30px;
-    font-weight: 600;
+    font-weight: 400;
     cursor: pointer;
 }
 
@@ -97,7 +97,7 @@
 }
 
 .main h1 {
-    font-size: 60px;
+    font-size: 40px;
     margin-bottom: 50px;
 }
 
